express app setup

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "engine"
   ],
   "author": "Farhan Tahir",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
