Added config and dotenv module to .env file and load envrionment configs

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Farhan Tahir",
   "license": "ISC",
   "dependencies": {
+    "config": "^2.0.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3"
   }
 }
