--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "config": "^2.0.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
