--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon bin/www.js",
     "start": "node bin/www.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "code-challenge",
@@ -27,6 +27,7 @@
     "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
+    "jest": "^23.5.0",
     "nodemon": "^1.18.3"
   }
 }
