--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: node_js
 node_js:
  - "10.9.0"
+addons:
+  code_climate:
+    repo_token: 5b5619751cd2de6442eb18947cbc517122f3561a4554fbb4d8c7826f6aaa01aa
+script: jest --coverage
+before_script: 
+  - npm install codeclimate-test-reporter jest -g
+after_script: 
+  - codeclimate-test-reporter < ./coverage/lcov.info
